# Astrotalk

./: .env.example  .flake8  .gitignore  ARCHITECTURE.md  README.md  WARP.md  cli.py  main.py  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
database/: cache.py  qdrant.py
embedding/: llm.py
languages/: translator.py
model/: __init__.py  schemas.py  zodiac.py
